--- a/style.css
+++ b/style.css
@@ -29,14 +29,7 @@ h3 {
   font-size: 24px;
   opacity: 0.7;
 }
-@media (max-width: 500px) {
-  h1{
-    font-size: 76px;
-  }
-  h2{
-    font-size: 36px;
-  }
-}
+
 p {
   padding: 20px;
   border-radius: 4px;
@@ -44,7 +37,6 @@ p {
   line-height: 1.5;
   text-align: center;
 }
-
 
 .navigation-links {
   display: flex;
@@ -78,12 +70,7 @@ p {
 }
 
 .about-paragraphs {
-  display: flex;
   margin: 30px 0;
-}
-
-.about-paragraphs p {
-  margin: 10px;
 }
 
 .email-link {
@@ -113,4 +100,19 @@ p {
   color: var(--terciary-color);
   cursor: pointer;
   background: var(--primary-color);
+}
+
+@media (max-width: 500px) {
+  h1 {
+    font-size: 65px;
+  }
+  h2 {
+    font-size: 36px;
+  }
+  .projects-desc {
+    text-align: center;
+  }
+  .text-start {
+    text-align: center !important;
+  }
 }
